Prototype Development - Fixing some issues with the resource lists in the side navigation (spacing, line-height, etc.) - Removed the hover effect for entire row items for the following pages: ce-inspection.html, subtopic.html, ce-main.html - Updated styling for tab navigation and fixed an issue with incorrect placement of the initial 'active' selector.

--- a/modules/prototype/client/styles/components/project-status.scss
+++ b/modules/prototype/client/styles/components/project-status.scss
@@ -1,7 +1,14 @@
 
-.project-status {
+.resource-list-sm.project-status {
+    padding: 0;
+
     .list-group-item {
-        margin-bottom: 2px; 
+        margin-bottom: 2px;
+        border-bottom: 1px solid #EEE;
+
+        .title {
+            line-height: 1.4rem;
+        }
     }
 
     .tag {
